--- a/languages/hybrid-base.pot
+++ b/languages/hybrid-base.pot
@@ -2,8 +2,8 @@
 # This file is distributed under the GNU General Public License v2.0 or later.
 msgid ""
 msgstr ""
-"Project-Id-Version: Hybrid Base 1.0.0\n"
-"Report-Msgid-Bugs-To: http://wordpress.org/tags/hybrid-base\n"
+"Project-Id-Version: Hybrid Sample 1.0.0\n"
+"Report-Msgid-Bugs-To: http://wordpress.org/tags/hybrid-sample\n"
 "POT-Creation-Date: 2015-08-19 16:54:48+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -451,11 +451,11 @@ msgstr ""
 msgid "This is an example widget to show how the Primary sidebar looks by default. You can add custom widgets from the %swidgets screen%s in the admin."
 msgstr ""
 #. Theme Name of the plugin/theme
-msgid "Hybrid Base"
+msgid "Hybrid Sample"
 msgstr ""
 
 #. Theme URI of the plugin/theme
-msgid "http://themehybrid.com/themes/hybrid-base"
+msgid "http://themehybrid.com/themes/hybrid-sample"
 msgstr ""
 
 #. Description of the plugin/theme
